# ski-bearing-stats

./: .gitignore  .pre-commit-config.yaml  CNAME  LICENSE.md  README.md  index.html  manuscript.html  openskimap-aspects.ipynb  playground.ipynb  pyproject.toml  robots.txt  search.json  sitemap.xml  ski-areas.html
.github/workflows/: analyze.yaml  tests.yaml
.github/workflows/setup-python/: action.yaml
.github/workflows/setup-quarto/: action.yaml
.github/workflows/setup-r/: action.yaml
manuscript/: index.html
openskistats/: analyze.py  bearing.py  commands.py  display.ipynb  display.py  models.py  openskimap_utils.py  osmnx_utils.py  plot.py  plot_runs.py  plot_ski_areas.py  utils.py
openskistats/tests/: test_analyze.py  test_bearing.py  test_display.py  test_openskimap_utils.py  test_utils.py
openskistats/tests/data/: .gitignore
openskistats/tests/data/openskimap/: info.json
openskistats/webapp/: _quarto.yml  index.qmd  manuscript.qmd  references.bib  references.yaml  ski-areas.qmd  snowflake.js  styles.css  webapp.css  webapp.js
openskistats/website/: index.qmd
openskistats/website/index/: style.css
openskistats/website/manuscript/: index.qmd
site_libs/bootstrap/: bootstrap-b3660cea41ded913a9c96e739bacef45.min.css
ski-areas/: index.html
ski_bearings/: analyze.py  bearing.py  commands.py  display.ipynb  display.py  models.py  openskimap_utils.py  osmnx_utils.py  plot.py  utils.py
ski_bearings/tests/: test_analyze.py  test_bearing.py  test_display.py  test_openskimap_utils.py
ski_bearings/tests/data/: runs.geojson  ski_areas.geojson
ski_bearings/tests/data/openskimap/: lifts.geojson  runs.geojson  ski_areas.geojson
skirolly/: index.html
website/: .gitignore  _quarto.yml  index.qmd
website/manuscript/: index.qmd  references.yml
website/ski-areas/: script.js
website/skirolly/: 01.data.R  02.plot.R  03.plot.R  index.qmd  style.css  test1.R
website/skirollytelling/: 02.setup.R  03.plot.R  index.qmd  setup.R  style.css
