[tool.poetry]
name = "ski_bearings"
version = "0.1.0"
description = "ski area aspects"
authors = ["Daniel Himmelstein"]
readme = "README.md"
repository = "https://github.com/dhimmel/ski-bearing-stats"

[tool.poetry.scripts]
ski_bearings = "ski_bearings.commands:Commands.command"

[tool.poetry.dependencies]
python = "^3.12"
geojson = "^3.1.0"
plotnine = "^0.13.0"
jupyter = "^1.0.0"
polars = "^0.20.10"
osmnx = "^2.0.0b0"
geopandas = "^0.14.3"
pyarrow = "^15.0.1"
typer = {extras = ["all"], version = "^0.11.0"}
plotly = "^5.20.0"
lets-plot = "^4.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
ignore = [
    "E501",  # line-too-long (black should handle)
]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycode warnings
]

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_context = true

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
module = [
    "fire.*",
    "fsspec.*",
    "networkx.*",
    "pandas.*",
    "rdflib.*",
    "requests.*",
]
ignore_missing_imports = true
