[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openskistats"
version = "0.1.0"
description = "OpenSkiStats: Shredding Data Like Powder"
authors = [
    {name = "Daniel Himmelstein"},
    {name = "Trang Le"},
]
readme = "README.md"
license = {file = "LICENSE.md"}
repository = "https://github.com/dhimmel/openskistats"
requires-python = ">= 3.12"
dependencies = [
    "great-tables >= 0.13.0", # https://github.com/machow/reactable-py/issues/29
    "jupyter >= 1.1.1",
    "lets-plot >= 4.5.1",
    "matplotlib >= 3.9.2",
    "mizani >= 0.13.0",
    "networkx >= 3.4.2",
    "numpy >= 2.1.3",
    "osmnx >= 2.0.0",
    "patito >= 0.8.2",
    "plotly >= 5.24.1",
    "plotnine >= 0.13.6",
    "polars >= 1.17.1",
    "pyarrow >= 17.0.0",
    "reactable >= 0.1.5",
    "requests >= 2.32.3",
    "typer >= 0.12.5",
]

[project.optional-dependencies]
dev = [
    "pre-commit >= 3.8.0",
    "pytest >= 7.4.4",
]

[project.scripts]
openskistats = "openskistats.commands:Commands.command"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
ignore = [
    "E501",  # line-too-long (black should handle)
]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycode warnings
]

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_context = true

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "pandas.*",
    "patito.*",
    "requests.*",
]
ignore_missing_imports = true
